2010-11-03  Marko Kohtala  <marko.kohtala@gmail.com>
  * gputils/gpvo.c (print_data): Fix to not hang on STYP_ACTREC.
  * gpasm/testsuite/gpasm.project/asmfiles/pagesel?.asm,
  gplink/testsuite/gplink.project/asmfiles/reloc1*.asm: Add test cases for
  pagesel $ in different pages. Compiled reference .hex files with mpasm
  5.34.

2010-10-18  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/directive.c (do_page): Do not start new page if in NOLIST.

2010-10-17  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/lst.c (lst_line): Allow printf formatting to avoid lots of error
  prone formatting to a buffer. Modify also uses of the function.
  (lst_printf,lst_eol): New functions to avoid need of building complicated
  string in buffer.
  (lst_format_line): Code rearranged to emit coff line number in beginning
  and avoid formatting of the line when listing is disabled by NOLIST.
  * Fix bug #3081197 and #3081206 by removing uses of strncat.

2010-09-27  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpprocessor.c: Bug #3038983 fix for PIC16 MOVLR instruction
  for GPR RAM bank selection.
  * gpasm/coff.c (_copy_config): config section size off by one.
  * gpasm/directive.c (do_config): Revert a change to PIC16 banksel
  instruction in object file. It broke a test case.
  * gpasm/testsuite/test: Print path to asm file being compiled.

2010-09-25  Marko Kohtala  <marko.kohtala@gmail.com>
  * Fix bugs from 2010-05-20 commit. Coff file reading got symbols
  wrong and relocations had problems. Closes bug #3066883. Bugs
  #3031576 and #3018489 may be duplicates and closed as well. Related
  test cases added.
  * No longer generate RELOCT_ACCESS relocations when access bit was
  explicitly defined in instruction.

2010-06-20  Borut Razem <borutr@users.sourceforge.net>
  * gpasm/gpasm.c, gpasm/gpasm.h:
    fixed bug #3018645: gpasm -o option: file name extension is overwritten

2010-05-20  Marko Kohtala  <marko.kohtala@gmail.com>