@@ -131,9 +131,9 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14,   "__16CE624",  { "pic16ce624",  "p16ce624",  "16ce624"  }, 0x6624, 1, 2, 0x3ff,    { -1, -1 },            { 0x2007, 0x2007 },     "16ce624.lkr"  },
   { PROC_CLASS_PIC14,   "__16CE625",  { "pic16ce625",  "p16ce625",  "16ce625"  }, 0x6625, 1, 2, 0x7ff,    { -1, -1 },            { 0x2007, 0x2007 },     "16ce625.lkr"  },
   { PROC_CLASS_PIC14,   "__16F627",   { "pic16f627",   "p16f627",   "16f627"   }, 0x6627, 1, 4, 0x217f,   { 0x400, 0x20ff },     { 0x2007, 0x2007 },     "16f627.lkr"   },
-  { PROC_CLASS_PIC14,   "__16F627A",  { "pic16f627a",  "p16f627a",  "16f627a"  }, 0x627a, 1, 4, 0x3ff,    { -1, -1 },            { 0x2007, 0x2007 },     "16f627a.lkr"  },
+  { PROC_CLASS_PIC14,   "__16F627A",  { "pic16f627a",  "p16f627a",  "16f627a"  }, 0x627a, 1, 4, 0x217f,   { 0x400, 0x20ff },     { 0x2007, 0x2007 },     "16f627a.lkr"  },
   { PROC_CLASS_PIC14,   "__16F628",   { "pic16f628",   "p16f628",   "16f628"   }, 0x6628, 1, 4, 0x217f,   { 0x800, 0x20ff },     { 0x2007, 0x2007 },     "16f628.lkr"   },
-  { PROC_CLASS_PIC14,   "__16F628A",  { "pic16f628a",  "p16f628a",  "16f628a"  }, 0x628a, 1, 4, 0x7ff,    { -1, -1 },            { 0x2007, 0x2007 },     "16f628a.lkr"  },
+  { PROC_CLASS_PIC14,   "__16F628A",  { "pic16f628a",  "p16f628a",  "16f628a"  }, 0x628a, 1, 4, 0x217f,   { 0x800, 0x20ff },     { 0x2007, 0x2007 },     "16f628a.lkr"  },
   { PROC_CLASS_PIC14,   "__16C63",    { "pic16c63",    "p16c63",    "16c63"    }, 0x6c63, 2, 2, 0xfff,    { -1, -1 },            { 0x2007, 0x2007 },     "16c63.lkr"    },
   { PROC_CLASS_PIC14,   "__16C63A",   { "pic16c63a",   "p16c63a",   "16c63a"   }, 0x663a, 2, 2, 0xfff,    { -1, -1 },            { 0x2007, 0x2007 },     "16c63a.lkr"   },
   { PROC_CLASS_PIC14,   "__16CR63",   { "pic16cr63",   "p16cr63",   "16cr63"   }, 0x6d63, 2, 2, 0xfff,    { -1, -1 },            { 0x2007, 0x2007 },     "16cr63.lkr"   },
@@ -216,7 +216,7 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14,   "__16C84",    { "pic16c84",    "p16c84",    "16c84"    }, 0x6c84, 1, 2, 0x213f,   { 0x400, 0x20ff },     { 0x2007, 0x2007 },     "16c84.lkr"    },
   { PROC_CLASS_PIC14,   "__16CR84",   { "pic16cr84",   "p16cr84",   "16cr84"   }, 0xdc84, 1, 2, 0x213f,   { 0x400, 0x20ff },     { 0x2007, 0x2007 },     "16cr84.lkr"   },
   { PROC_CLASS_PIC14,   "__16F84",    { "pic16f84",    "p16f84",    "16f84"    }, 0x684a, 1, 2, 0x213f,   { 0x400, 0x20ff },     { 0x2007, 0x2007 },     "16f84.lkr"    },
-  { PROC_CLASS_PIC14,   "__16F84A",   { "pic16f84a",   "p16f84a",   "16f84a"   }, 0x6f84, 1, 2, 0x3ff,    { -1, -1 },            { 0x2007, 0x2007 },     "16f84a.lkr"   },
+  { PROC_CLASS_PIC14,   "__16F84A",   { "pic16f84a",   "p16f84a",   "16f84a"   }, 0x6f84, 1, 2, 0x213f,   { 0x400, 0x20ff },     { 0x2007, 0x2007 },     "16f84a.lkr"   },
   { PROC_CLASS_PIC14,   "__16F87",    { "pic16f87",    "p16f87",    "16f87"    }, 0x687f, 2, 4, 0x21ff,   { 0x1000, 0x20ff },    { 0x2007, 0x2008 },     "16f87.lkr"    },
   { PROC_CLASS_PIC14,   "__16F870",   { "pic16f870",   "p16f870",   "16f870"   }, 0x870f, 1, 4, 0x213f,   { 0x800, 0x20ff },     { 0x2007, 0x2007 },     "16f870.lkr"   },
   { PROC_CLASS_PIC14,   "__16F871",   { "pic16f871",   "p16f871",   "16f871"   }, 0x871f, 1, 4, 0x213f,   { 0x800, 0x20ff },     { 0x2007, 0x2007 },     "16f871.lkr"   },
@@ -245,8 +245,8 @@ static struct px pics[] = {
   { PROC_CLASS_PIC14,   "__16C926",   { "pic16c926",   "p16c926",   "16c926"   }, 0x6926, 4, 4, 0x1fff,   { -1, -1 },            { 0x2007, 0x2007 },     "16c926.lkr"   },
   { PROC_CLASS_PIC14,   "__16F946",   { "pic16f946",   "p16f946",   "16f946"   }, 0xf946, 4, 4, 0x21ff,   { 0x2000, 0x20ff },    { 0x2007, 0x2007 },     "16f946.lkr"   },
   { PROC_CLASS_PIC16,   "__17CXX",    { "pic17cxx",    "p17cxx",    "17cxx"    }, 0x7756, 0, 0, -1,       { -1, -1 },            { -1, -1 },             NULL           },
-  { PROC_CLASS_PIC16,   "__17C42",    { "pic17c42",    "p17c42",    "17c42"    }, 0x7c42, 0, 0, 0x7ff,    { -1, -1 },            { 0xFE00, 0xFE0F },     "17c42.lkr"    },
-  { PROC_CLASS_PIC16,   "__17C42A",   { "pic17c42a",   "p17c42a",   "17c42a"   }, 0x742a, 0, 0, 0x7ff,    { -1, -1 },            { 0xFE00, 0xFE0F },     "17c42a.lkr"   },
+  { PROC_CLASS_PIC16,   "__17C42",    { "pic17c42",    "p17c42",    "17c42"    }, 0x7c42, 0, 0, 0xffff,   { -1, -1 },            { 0xFE00, 0xFE0F },     "17c42.lkr"    },
+  { PROC_CLASS_PIC16,   "__17C42A",   { "pic17c42a",   "p17c42a",   "17c42a"   }, 0x742a, 0, 0, 0xffff,   { -1, -1 },            { 0xFE00, 0xFE0F },     "17c42a.lkr"   },
   { PROC_CLASS_PIC16,   "__17CR42",   { "pic17cr42",   "p17cr42",   "17cr42"   }, 0xe42a, 0, 0, 0x7ff,    { -1, -1 },            { 0xFE00, 0xFE0F },     "17cr42.lkr"   },
   { PROC_CLASS_PIC16,   "__17C43",    { "pic17c43",    "p17c43",    "17c43"    }, 0x7c43, 0, 0, 0xfff,    { -1, -1 },            { 0xFE00, 0xFE0F },     "17c43.lkr"    },
   { PROC_CLASS_PIC16,   "__17CR43",   { "pic17cr43",   "p17cr43",   "17cr43"   }, 0xec43, 0, 0, 0xfff,    { -1, -1 },            { 0xFE00, 0xFE0F },     "17cr43.lkr"   },
